# Rack-Manager

./: .gitmodules  README.md
Contrib-Inspur/: README.md
Contrib-Inspur/OR-web/: README.md  babel.config.js  package-lock.json  package.json  vue.config.js
Contrib-Inspur/bmcweb/: CMakeLists.txt
Contrib-Inspur/openrmc/: 0001-Add-rmc-web-server.patch  0002-Add-webui.patch  0003-Add-meta-openrmc.patch  0004-Update-README.patch  README.md
Contrib-Inspur/rmcweb/: 0001-Add-compilation-option-for-rmc-redfish.patch  0002-Implement-the-rmc-redfish-interface-with-fake-data.patch  0003-Add-cpr-for-https-communication.patch  0004-Add-thermal-interface.patch  README.md
Contrib-Intel/RSD-PSME-RMM/: CMakeLists.txt  README.md  build_main.sh
Contrib-Intel/RSD-PSME-RMM/agent-stubs/rmm/src/: CMakeLists.txt  generate_data.cpp  main.cpp  telemetry_service.cpp
Contrib-Intel/RSD-PSME-RMM/agent-stubs/rmm/src/command/: CMakeLists.txt  get_chassis_info.cpp  get_collection.cpp  get_fan_info.cpp  get_manager_info.cpp  get_managers_collection.cpp  get_network_interface_info.cpp  get_port_vlan_info.cpp  get_power_zone_info.cpp  get_psu_info.cpp  get_task_info.cpp  get_task_result_info.cpp  get_tasks_collection.cpp  get_thermal_zone_info.cpp  set_component_attributes.cpp
Contrib-Microsoft/Olympus-rackmanager-build/: buildImage.sh  buildver.inc  getubootpatchfiles.sh  makekernelpatch.sh  makeubootpatch.sh  updatebuildver.sh
Contrib-Microsoft/Olympus_meta_rack_manager/: README
Contrib-Microsoft/Olympus_rack_manager/: LICENSE.md  README.md
OpenRMC/: README.md
(+691 files in other folders)
